tests/error_tests/undefined_in_pp.tau
func main(){
    #s = "3"; //error: undefined
    return #paste(s);
}
